--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/error/error.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/error/error.html
@@ -4,10 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link href="/Content/login.css" rel="stylesheet" />
-
 </head>
 <body style="padding: 0px; margin: 0px auto; background: url(/images/Error/404_1.jpg) center no-repeat;">
-    <div style="width:1024px; height:760px;"></div>
+    <div style="width:1024px; height:760px;">
+        错误
+    </div>
 </body>
 </html>
