--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/oupicker.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/oupicker.html
@@ -1,5 +1,5 @@
 ﻿
-<link href="../../lib/framework/css/bootstrap-treeview.min.css" rel="stylesheet" />
+<link href="../../lib/bootstrap-treeview/dist/bootstrap-treeview.min.css" rel="stylesheet" />
 <style type="text/css">
     .modal .panel-body {
         padding: 0;
@@ -21,7 +21,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <div id="OUSelectionTree" data-url="../../picker/GetDepData" data-text="departmentName" data-nodes="children" style="height:300px; overflow-y:auto"></div>
+                        <div id="OUSelectionTree" data-url="../../picker/GetDepData" data-text="departmentName" style="height:300px; overflow-y:auto"></div>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
 </div>
 
 <script src="../../lib/framework/js/multiselect.min.js"></script>
-<script src="../../lib/framework/js/bootstrap-treeview.min.js"></script>
+<script src="../../lib/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
 <script type="text/javascript">
     $("#OUSelection").modal('hide');    //防止重复点击
     $("#OUSelection").modal('show');
