--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layoutflow.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layoutflow.html
@@ -12,8 +12,7 @@
     <!--基础引用-->
     <link href="../../lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../../lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <!--jquery-ui css-->
-    <link rel="stylesheet" href="../../lib/framework/css/jquery-ui.css">
+    <link href="../../lib/jquery-ui/themes/start/jquery-ui.min.css" rel="stylesheet" />
     <!--组件引用-->
     <link rel="stylesheet" href="../../css/framework/AdminLTE.min.css">
     <link rel="stylesheet" href="../../css/framework/skins/_all-skins.min.css">
@@ -34,11 +33,10 @@
     <!--基础引用-->
     <script src="../../lib/jquery/dist/jquery.min.js"></script>
     <script src="../../lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!--juqery-ui-min-->
-    <script src="../../lib/framework/js/jquery-ui.min.js"></script>
+    <script src="../../lib/jquery-ui/jquery-ui.min.js"></script>
     <!--组件引用-->
-    <script type="text/javascript" src="../../lib/framework/js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="../../lib/framework/js/jquery.form.min.js"></script>
+    <script src="../../lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="../../lib/jquery-form/dist/jquery.form.min.js"></script>
     <script type="text/javascript" src="../../js/framework/adminlte.min.js"></script>
     <!-- 框架引用 -->
     <script type="text/javascript" src="../../js/framework/BitAdmin.js"></script>
@@ -57,7 +55,7 @@
                 ModulePicker: "../Picker/ModuleSelection.html",
             },
             DataApis: {
-                DicUrl: "../../SysInfoManage/GetDictionary"
+                DicUrl: "../../develop/GetDictionary"
             }
         });
     </script>
