--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/roleOperate.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/roleOperate.html
@@ -1,5 +1,5 @@
 ﻿
-<link rel="stylesheet" href="../../lib/framework/css/jquery.treegrid.css" />
+<link href="../../lib/jquery-treegrid/css/jquery.treegrid.css" rel="stylesheet" />
 <div class="box">
     <div class="box-body querySuite-wrapper">
         <!-- 按钮 查询 导入 -->
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<script src="../../lib/framework/js/jquery.treegrid.js"></script>
+<script src="../../lib/jquery-treegrid/js/jquery.treegrid.min.js"></script>
 <script type="text/javascript">
     var saveRoleModuleData;
     $(function () {
