--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflow/flowHandle.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflow/flowHandle.html
@@ -211,6 +211,7 @@
 
         //发起、提交、回退 确定
         $('#FlowHandleModal [name=SaveData]').click(function () {
+            debugger;
             _options.nextStepList_ToEx = array.removeAll(_options.nextStepList_ToEx);
             $.each(_options.nextStepList_To, function (index, value) {
                 if (value.processType == _options.processType) {
