--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/prototypingexample.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/prototypingexample.html
@@ -1,6 +1,5 @@
-﻿
-<div class="box">
-    <div class="box-body querySuite-wrapper">
+﻿<div class="box">
+    <div id="querySuiteOne" class="box-body querySuite-wrapper">
         <!-- 条件搜索 -->
         <div class="querySuite-filter">
             <table>
@@ -11,15 +10,11 @@
                     <td><input type="text" name="c2" class="form-control" /></td>
                     <th>列一:</th>
                     <td><input type="text" name="c3" class="form-control" /></td>
-                    <th>列一:</th>
-                    <td>
-                        <input type="text" name="c4" class="form-control" />
-                        <input type="hidden" name="sign" value="prototypingexample" />
-                    </td>
+                    <td><input type="hidden" name="sign" value="prototypingexample" /></td>
                 </tr>
             </table>
         </div>
-        <!-- 按钮 查询 导入 -->
+        <!-- 按钮 查询 添加 删除 等 -->
         <div class="querySuite-button">
             <button class="btn btn-default" action="query">
                 <span class="glyphicon glyphicon-search"></span> 查询
@@ -31,7 +26,7 @@
                 <span class="glyphicon glyphicon-trash"></span> 删除
             </button>
         </div>
-        <!-- 列表-->
+        <!-- 列表 操作 -->
         <div class="querySuite-table"
              data-key="c1,sign"
              data-query-url="../../prototyping/query"
@@ -45,52 +40,62 @@
                         <th data-field="c3">列三</th>
                         <th data-field="c4">列四</th>
                         <th data-field="c5">列五</th>
+                        <th data-field="c6">列六</th>
+                        <th data-field="c7">列七</th>
+                        <th data-field="c8">列八</th>
+                        <th data-field="c9">列九</th>
                     </tr>
                 </thead>
             </table>
         </div>
-        <!-- 分页 -->
+        <!-- 分页 默认10行-->
         <div class="querySuite-paging"></div>
     </div>
 </div>
 <!-- 模态框（Modal）编辑数据字典信息 -->
-<div id="myModal" class="modal fade formSuite-wrapper" role="dialog" aria-hidden="true">
+<div id="formSuiteOne" class="modal fade formSuite-wrapper" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <form data-title="原型示例"
+                <form data-title="模型名称"
                       data-save-url="../../prototyping/save"
                       data-load-url="../../prototyping/load">
                     <table>
                         <tr>
                             <th>列一：</th>
-                            <td>
-                                <input type="text" name="c1" required class="form-control" />                             
-                            </td>
+                            <td><input type="text" name="c1" required class="form-control" /></td>
                         </tr>
                         <tr>
                             <th>列二：</th>
-                            <td>
-                                <input type="text" name="c2" required class="form-control" />
-                            </td>
+                            <td><input type="text" name="c2" required class="form-control" /></td>
                         </tr>
                         <tr>
                             <th>列三：</th>
-                            <td>
-                                <input type="text" name="c3" required class="form-control" />
-                            </td>
+                            <td><input type="text" name="c3" required class="form-control" /></td>
                         </tr>
                         <tr>
                             <th>列四：</th>
-                            <td>
-                                <input type="text" name="c4" required class="form-control" />
-                            </td>
+                            <td><input type="text" name="c4" required class="form-control" /></td>
                         </tr>
                         <tr>
                             <th>列五：</th>
-                            <td>
-                                <input type="text" name="c5" required class="form-control" />
-                            </td>
+                            <td><input type="text" name="c5" required class="form-control" /></td>
+                        </tr>
+                        <tr>
+                            <th>列六：</th>
+                            <td><input type="text" name="c6" required class="form-control" /></td>
+                        </tr>
+                        <tr>
+                            <th>列七：</th>
+                            <td><input type="text" name="c7" required class="form-control" /></td>
+                        </tr>
+                        <tr>
+                            <th>列八：</th>
+                            <td><input type="text" name="c8" required class="form-control" /></td>
+                        </tr>
+                        <tr>
+                            <th>列九：</th>
+                            <td><input type="text" name="c9" required class="form-control" /></td>
                         </tr>
                     </table>
                 </form>
@@ -109,17 +114,7 @@
 
 <script type="text/javascript">
     $(function () {
-        //查询套件初始化
-        var querySuite = $(".querySuite-wrapper").querySuite().query();
-
-        //表单套件初始化
-        var formSuite = $("#myModal").formSuite()
-            .add(function () {//点击添加：初始化表单后
-            })
-            .edit(function () {//点击编辑：加载数据后
-            })
-            .submit(function () {//点击保存：数据保存成功后
-                querySuite.query();
-            });
+        var querySuite = $("#querySuiteOne").querySuite().query();
+        var formSuite = $("#formSuiteOne").formSuite();
     });
 </script>
