--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/examplepicker.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/picker/examplepicker.html
@@ -4,9 +4,9 @@
         padding: 0;
     }
 </style>
-<link href="../../Content/Components/bootstrap-treeview.min.css" rel="stylesheet" />
+<link href="../../lib/bootstrap-treeview/dist/bootstrap-treeview.min.css" rel="stylesheet" />
 
-<div class="modal fade" id="Module_module" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true" style="top: 30px">
+<div class="modal fade" id="pickerModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true" style="top: 30px">
     <div class="modal-dialog" style="width:400px;overflow-y:auto;">
         <div class="modal-content">
             <div class="panel panel-default" style="margin-bottom: 0; width:100%;">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="panel-body">
-                        <div id="Module_Tree" data-url="../../picker/GetExampleTreeData" data-text="ExampleName" data-nodes="children" style="height:300px; overflow-y:auto"></div>
+                        <div id="moduleTree" data-url="../../picker/GetExampleTreeData" data-text="exampleName" style="height:300px; overflow-y:auto"></div>
                     </div>
                 </div>
             </div>
@@ -34,26 +34,26 @@
     </div><!-- /.modal -->
 </div>
 
-<script src="../../lib/framework/js/bootstrap-treeview.min.js"></script>
+<script src="../../lib/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
 <script type="text/javascript">
-    $("#Module_module").modal('hide');//防止重复点击
-    $("#Module_module").modal('show');
-    var param = JSON.parse($("#Module_module").parent().attr("data-param"));
+    $("#pickerModal").modal('hide');//防止重复点击
+    $("#pickerModal").modal('show');
+    var param = JSON.parse($("#pickerModal").parent().attr("data-param"));
     var valueInput = param.value;
     var textInput = param.text;
-    
-    $("#Module_module #Module_Tree").tree({
+
+    $("#pickerModal #moduleTree").tree({
         onNodeSelected: function (event, node) {
             $(valueInput).val(node.id);
             $(textInput).val(node.ExampleName);
             $(textInput).change();
-            $("#Module_module").modal('hide');
+            $("#pickerModal").modal('hide');
         }
     }).load();
 
     $("#clear_input").click(function () {
         $(valueInput).val("");
         $(textInput).val("");
-        $("#Module_module").modal('hide');
+        $("#pickerModal").modal('hide');
     });
 </script>
